# ciroh_ngiab_python

./: .gitignore  Dockerfile  MANIFEST.in  README.md  docker_run.sh  guide.py  ngiab.py  pyproject.toml  test_ngiab.py
.github/: dependabot.yml
.github/workflows/: main.yml
2i2c_rockylinux/: Dockerfile  docker_run.sh
2i2c_rockylinux/pangeo-notebook-rocky/: Dockerfile  docker_run.sh
docker/: Dockerfile  docker_run.sh
ngiab-pangeo/: Dockerfile
ngiab-pangeo/tests/: action.yml  test-entrypoint.sh
ngiab-ubuntu/: Dockerfile  docker_run.sh
pyngiab/: __init__.py  pyngiab.py  pyngiab_datapreprocess.py
tests/: action.yml  test-entrypoint.sh  test_ngiab_data_preprocess.py  test_pyngiab.py  tests.py
