[project]
name = "pyngiab"
version = "0.1.0"
description = "A Python library for geospatial and hydrological data processing using NGIAB"
readme = "README.md"
authors = [
  { name="Furqan Baig", email="fbaig@illinois.edu" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 4 - Beta"
]
dependencies = [
  # Add required packages here
]

[project.urls]
Homepage = "https://github.com/fbaig/ciroh_pyngiab"
Repository = "https://github.com/fbaig/ciroh_pyngiab"

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"