[project]
name = "pyngiab"
version = "1.0.0"
#dynamic = ["version"]
description = "A Python library for geospatial and hydrological data processing using NGIAB"
readme = "README.md"
authors = [
  { name="Furqan Baig", email="fbaig@illinois.edu" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 4 - Beta"
]
dependencies = [

  #"numpy==1.26.4",
  #"netCDF4==1.6.3",
  #"pydantic<2",
]

[project.urls]
Homepage = "https://github.com/fbaig/ciroh_pyngiab"
Repository = "https://github.com/fbaig/ciroh_pyngiab"

[build-system]
requires = ["setuptools>=77.0.3", "setuptools_scm"]
build-backend = "setuptools.build_meta"